[package]
name = "build-polyjuice-args"
version = "0.1.0"
authors = ["Linfeng Qian <thewawar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
clap = "2.33"
numext-fixed-uint = "0.1.6"
numext-fixed-hash = "0.1.6"